@@ -4,6 +4,11 @@ Changelog
 2.0b3 - unreleased
 ------------------
 
+- Fixed the portal type criterion to use the really user friendly types
+  vocabulary, which makes it independent of the types selection allowed for
+  searching. We also provide the proper translated title of all types and sort
+  by it now. This closes http://dev.plone.org/plone/ticket/9802.
+  [hannosch]
 
 2.0b2 - 2010-01-25
 ------------------
